Bug 175928 - Crashing when trying to export
Summary: Crashing when trying to export
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-WebService-Piwigo (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-11-23 21:11 UTC by Blindauer Emmanuel
Modified: 2023-02-25 08:25 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.2.0
Sentry Crash Report:


Attachments
degug trace, gdb output, wireshark tcp protocol (29.34 KB, text/plain)
2009-01-15 07:00 UTC, Gerhard Kulzer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Blindauer Emmanuel 2008-11-23 21:11:31 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

First Run: I right click an album to export to a gallery2 webservice. A form is loaded with name, URL, login, pass. pressing ok make digikam crash.

After installeing the -debug package, I'm no more asked to enter name URL login pass for the webservice, but crash immediately.
Here the backtrace:

Application : digiKam (digikam), signal SIGABRT
[Current thread is 1 (Thread 0xb46726d0 (LWP 17576))]

Thread 11 (Thread 0xb307eb90 (LWP 17577)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb5456b95 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i686/libpthread.so.0
#2  0xb554b21d in pthread_cond_wait () from /lib/i686/libc.so.6
#3  0xb61ae9ab in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#4  0x082828ba in ?? ()
#5  0xb61ad89f in ?? () from /usr/lib/libQtCore.so.4
#6  0xb5453315 in start_thread () from /lib/i686/libpthread.so.0
#7  0xb553ddde in clone () from /lib/i686/libc.so.6

Thread 10 (Thread 0xb259cb90 (LWP 17578)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb5456b95 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i686/libpthread.so.0
#2  0xb554b21d in pthread_cond_wait () from /lib/i686/libc.so.6
#3  0xb61ae9ab in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#4  0xb74fceb8 in Digikam::LoadSaveThread::run (this=0x925fe00) at /usr/src/debug/digikam-0.10.0-beta5/libs/threadimageio/loadsavethread.cpp:129
#5  0xb61ad89f in ?? () from /usr/lib/libQtCore.so.4
#6  0xb5453315 in start_thread () from /lib/i686/libpthread.so.0
#7  0xb553ddde in clone () from /lib/i686/libc.so.6

Thread 9 (Thread 0xb1d9bb90 (LWP 17579)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb5456b95 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i686/libpthread.so.0
#2  0xb554b21d in pthread_cond_wait () from /lib/i686/libc.so.6
#3  0xb61ae9ab in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#4  0xb74fceb8 in Digikam::LoadSaveThread::run (this=0x928a5d8) at /usr/src/debug/digikam-0.10.0-beta5/libs/threadimageio/loadsavethread.cpp:129
#5  0xb61ad89f in ?? () from /usr/lib/libQtCore.so.4
#6  0xb5453315 in start_thread () from /lib/i686/libpthread.so.0
#7  0xb553ddde in clone () from /lib/i686/libc.so.6

Thread 8 (Thread 0xaf11db90 (LWP 17580)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb5456ec2 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/i686/libpthread.so.0
#2  0xb554b274 in pthread_cond_timedwait () from /lib/i686/libc.so.6
#3  0xafde79c1 in ?? () from /usr/lib/libxine.so.1
#4  0xb5453315 in start_thread () from /lib/i686/libpthread.so.0
#5  0xb553ddde in clone () from /lib/i686/libc.so.6

Thread 7 (Thread 0xae44db90 (LWP 17581)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb5536101 in select () from /lib/i686/libc.so.6
#2  0xafe125b2 in xine_usec_sleep () from /usr/lib/libxine.so.1
#3  0xafdf5ead in ?? () from /usr/lib/libxine.so.1
#4  0xb5453315 in start_thread () from /lib/i686/libpthread.so.0
#5  0xb553ddde in clone () from /lib/i686/libc.so.6

Thread 6 (Thread 0xadc4cb90 (LWP 17582)):
#0  0xb4dd017a in clock_gettime () from /lib/i686/librt.so.1
#1  0xb62d3eec in ?? () from /usr/lib/libQtCore.so.4
#2  0xb62d40e2 in ?? () from /usr/lib/libQtCore.so.4
#3  0xb62d5b42 in ?? () from /usr/lib/libQtCore.so.4
#4  0xb62d254b in ?? () from /usr/lib/libQtCore.so.4
#5  0xb4d44786 in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#6  0xb4d44ba9 in ?? () from /usr/lib/libglib-2.0.so.0
#7  0xb4d450a8 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#8  0xb62d2367 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#9  0xb62a4ec3 in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#10 0xb62a5081 in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#11 0xb61aa50b in QThread::exec () from /usr/lib/libQtCore.so.4
#12 0xafe64cb8 in ?? () from /usr/lib/kde4/plugins/phonon_backend/phonon_xine.so
#13 0xb61ad89f in ?? () from /usr/lib/libQtCore.so.4
#14 0xb5453315 in start_thread () from /lib/i686/libpthread.so.0
#15 0xb553ddde in clone () from /lib/i686/libc.so.6

Thread 5 (Thread 0xad2f4b90 (LWP 17583)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb5456b95 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i686/libpthread.so.0
#2  0xb554b21d in pthread_cond_wait () from /lib/i686/libc.so.6
#3  0xb61ae9ab in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#4  0xb74fceb8 in Digikam::LoadSaveThread::run (this=0xb3c3db0) at /usr/src/debug/digikam-0.10.0-beta5/libs/threadimageio/loadsavethread.cpp:129
#5  0xb61ad89f in ?? () from /usr/lib/libQtCore.so.4
#6  0xb5453315 in start_thread () from /lib/i686/libpthread.so.0
#7  0xb553ddde in clone () from /lib/i686/libc.so.6

Thread 4 (Thread 0xaca06b90 (LWP 17602)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb552d54b in read () from /lib/i686/libc.so.6
#2  0xb00e52f1 in ?? () from /usr/lib/libasound.so.2
#3  0xb00e27bc in snd_ctl_read () from /usr/lib/libasound.so.2
#4  0xb00dec40 in snd_hctl_handle_events () from /usr/lib/libasound.so.2
#5  0xb00eacf9 in snd_mixer_handle_events () from /usr/lib/libasound.so.2
#6  0xac200bf5 in ?? () from /usr/lib/xine/plugins/1.24/xineplug_ao_out_alsa.so
#7  0xb5453315 in start_thread () from /lib/i686/libpthread.so.0
#8  0xb553ddde in clone () from /lib/i686/libc.so.6

Thread 3 (Thread 0xac1bab90 (LWP 17603)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb5456b95 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i686/libpthread.so.0
#2  0xb554b21d in pthread_cond_wait () from /lib/i686/libc.so.6
#3  0xafdf992c in ?? () from /usr/lib/libxine.so.1
#4  0xb5453315 in start_thread () from /lib/i686/libpthread.so.0
#5  0xb553ddde in clone () from /lib/i686/libc.so.6

Thread 2 (Thread 0xab9b9b90 (LWP 17604)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb5456ec2 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/i686/libpthread.so.0
#2  0xb554b274 in pthread_cond_timedwait () from /lib/i686/libc.so.6
#3  0xb61ae97f in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#4  0xb61a341a in ?? () from /usr/lib/libQtCore.so.4
#5  0xb61ad89f in ?? () from /usr/lib/libQtCore.so.4
#6  0xb5453315 in start_thread () from /lib/i686/libpthread.so.0
#7  0xb553ddde in clone () from /lib/i686/libc.so.6

Thread 1 (Thread 0xb46726d0 (LWP 17576)):
[KCrash Handler]
#6  0xffffe424 in __kernel_vsyscall ()
#7  0xb548ed90 in raise () from /lib/i686/libc.so.6
#8  0xb54907f8 in abort () from /lib/i686/libc.so.6
#9  0xb61a5445 in qt_message_output () from /usr/lib/libQtCore.so.4
#10 0xb61a5535 in qFatal () from /usr/lib/libQtCore.so.4
#11 0xb61a559d in qt_assert_x () from /usr/lib/libQtCore.so.4
#12 0xab1a9650 in ?? () from /usr/lib/kde4/kipiplugin_galleryexport.so
#13 0xab1aae23 in ?? () from /usr/lib/kde4/kipiplugin_galleryexport.so
#14 0xb62bbc8d in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#15 0xb62bca95 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#16 0xab1abea5 in ?? () from /usr/lib/kde4/kipiplugin_galleryexport.so
#17 0xab1af39a in ?? () from /usr/lib/kde4/kipiplugin_galleryexport.so
#18 0xab1b1037 in ?? () from /usr/lib/kde4/kipiplugin_galleryexport.so
#19 0xab1b1135 in ?? () from /usr/lib/kde4/kipiplugin_galleryexport.so
#20 0xb62bbc8d in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#21 0xb62bca95 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#22 0xb6d32bb5 in KJob::result (this=0xd349ae8, _t1=0xd349ae8) at /usr/src/debug/kdelibs-4.1.80/build/kdecore/kjob.moc:186
#23 0xb6d33139 in KJob::emitResult (this=0xd349ae8) at /usr/src/debug/kdelibs-4.1.80/kdecore/jobs/kjob.cpp:294
#24 0xb65056ff in KIO::SimpleJob::slotFinished (this=0xd349ae8) at /usr/src/debug/kdelibs-4.1.80/kio/kio/job.cpp:489
#25 0xb6508f33 in KIO::TransferJob::slotFinished (this=0xd349ae8) at /usr/src/debug/kdelibs-4.1.80/kio/kio/job.cpp:957
#26 0xb6502e44 in KIO::TransferJob::qt_metacall (this=0xd349ae8, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0xbf851838) at /usr/src/debug/kdelibs-4.1.80/build/kio/jobclasses.moc:336
#27 0xb62bbc8d in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#28 0xb62bca95 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#29 0xb65d8445 in KIO::SlaveInterface::finished (this=0xd346b80) at /usr/src/debug/kdelibs-4.1.80/build/kio/slaveinterface.moc:163
#30 0xb65dc513 in KIO::SlaveInterface::dispatch (this=0xd346b80, _cmd=104, rawdata=@0xbf8519f4) at /usr/src/debug/kdelibs-4.1.80/kio/kio/slaveinterface.cpp:175
#31 0xb65d8930 in KIO::SlaveInterface::dispatch (this=0xd346b80) at /usr/src/debug/kdelibs-4.1.80/kio/kio/slaveinterface.cpp:91
#32 0xb65c9366 in KIO::Slave::gotInput (this=0xd346b80) at /usr/src/debug/kdelibs-4.1.80/kio/kio/slave.cpp:322
#33 0xb65ca530 in KIO::Slave::qt_metacall (this=0xd346b80, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbf851af8) at /usr/src/debug/kdelibs-4.1.80/build/kio/slave.moc:75
#34 0xb62bbc8d in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#35 0xb62bca95 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#36 0xb64c8095 in KIO::Connection::readyRead (this=0xd349648) at /usr/src/debug/kdelibs-4.1.80/build/kio/connection.moc:84
#37 0xb64ca28d in KIO::ConnectionPrivate::dequeue (this=0xd349400) at /usr/src/debug/kdelibs-4.1.80/kio/kio/connection.cpp:82
#38 0xb64ca41b in KIO::Connection::qt_metacall (this=0xd349648, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0xd3388b0) at /usr/src/debug/kdelibs-4.1.80/build/kio/connection.moc:72
#39 0xb62b4b8a in QMetaCallEvent::placeMetaCall () from /usr/lib/libQtCore.so.4
#40 0xb62b6782 in QObject::event () from /usr/lib/libQtCore.so.4
#41 0xb5959fac in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#42 0xb59621d5 in QApplication::notify () from /usr/lib/libQtGui.so.4
#43 0xb709fba1 in KApplication::notify (this=0xbf854338, receiver=0xd349648, event=0xd34a830) at /usr/src/debug/kdelibs-4.1.80/kdeui/kernel/kapplication.cpp:307
#44 0xb62a6853 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#45 0xb62a7535 in QCoreApplicationPrivate::sendPostedEvents () from /usr/lib/libQtCore.so.4
#46 0xb62a771c in QCoreApplication::sendPostedEvents () from /usr/lib/libQtCore.so.4
#47 0xb62d272d in ?? () from /usr/lib/libQtCore.so.4
#48 0xb4d417ca in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#49 0xb4d44ee8 in ?? () from /usr/lib/libglib-2.0.so.0
#50 0xb4d450a8 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#51 0xb62d234a in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#52 0xb59f692a in ?? () from /usr/lib/libQtGui.so.4
#53 0xb62a4ec3 in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#54 0xb62a5081 in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#55 0xb5deb571 in QDialog::exec () from /usr/lib/libQtGui.so.4
#56 0xab1a06cf in ?? () from /usr/lib/kde4/kipiplugin_galleryexport.so
#57 0xab1a098d in ?? () from /usr/lib/kde4/kipiplugin_galleryexport.so
#58 0xb62bbc8d in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#59 0xb62bc0bb in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#60 0xb59539f5 in QAction::triggered () from /usr/lib/libQtGui.so.4
#61 0xb59543e7 in QAction::activate () from /usr/lib/libQtGui.so.4
#62 0xb5d51807 in ?? () from /usr/lib/libQtGui.so.4
#63 0xb5d52284 in QMenu::mouseReleaseEvent () from /usr/lib/libQtGui.so.4
#64 0xb59b499a in QWidget::event () from /usr/lib/libQtGui.so.4
#65 0xb5d54624 in QMenu::event () from /usr/lib/libQtGui.so.4
#66 0xb5959fac in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#67 0xb5962bbf in QApplication::notify () from /usr/lib/libQtGui.so.4
#68 0xb709fba1 in KApplication::notify (this=0xbf854338, receiver=0xbf85329c, event=0xbf852a18) at /usr/src/debug/kdelibs-4.1.80/kdeui/kernel/kapplication.cpp:307
#69 0xb62a6853 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#70 0xb5961de1 in QApplicationPrivate::sendMouseEvent () from /usr/lib/libQtGui.so.4
#71 0xb59cef3a in ?? () from /usr/lib/libQtGui.so.4
#72 0xb59ce150 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#73 0xb59f71d4 in ?? () from /usr/lib/libQtGui.so.4
#74 0xb4d417ca in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#75 0xb4d44ee8 in ?? () from /usr/lib/libglib-2.0.so.0
#76 0xb4d450a8 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#77 0xb62d234a in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#78 0xb59f692a in ?? () from /usr/lib/libQtGui.so.4
#79 0xb62a4ec3 in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#80 0xb62a5081 in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#81 0xb5d543b3 in QMenu::exec () from /usr/lib/libQtGui.so.4
#82 0x081f1cc4 in ?? ()
#83 0x081f28b1 in ?? ()
#84 0xb62bbc8d in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#85 0xb62bca95 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#86 0xb6b2d585 in Q3ListView::contextMenuRequested () from /usr/lib/libQt3Support.so.4
#87 0xb69b22f0 in Q3ListView::contentsContextMenuEvent () from /usr/lib/libQt3Support.so.4
#88 0xb6a130a2 in Q3ScrollView::viewportContextMenuEvent () from /usr/lib/libQt3Support.so.4
#89 0xb6a1522f in Q3ScrollView::eventFilter () from /usr/lib/libQt3Support.so.4
#90 0xb69ae347 in Q3ListView::eventFilter () from /usr/lib/libQt3Support.so.4
#91 0xb62a59ce in QCoreApplicationPrivate::sendThroughObjectEventFilters () from /usr/lib/libQtCore.so.4
#92 0xb5959f7f in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#93 0xb5962717 in QApplication::notify () from /usr/lib/libQtGui.so.4
#94 0xb709fba1 in KApplication::notify (this=0xbf854338, receiver=0xb39c560, event=0xbf853ac0) at /usr/src/debug/kdelibs-4.1.80/kdeui/kernel/kapplication.cpp:307
#95 0xb62a6853 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#96 0xb596538d in QCoreApplication::sendSpontaneousEvent () from /usr/lib/libQtGui.so.4
#97 0xb59cf422 in ?? () from /usr/lib/libQtGui.so.4
#98 0xb59ce150 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#99 0xb59f71d4 in ?? () from /usr/lib/libQtGui.so.4
#100 0xb4d417ca in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#101 0xb4d44ee8 in ?? () from /usr/lib/libglib-2.0.so.0
#102 0xb4d450a8 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#103 0xb62d234a in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#104 0xb59f692a in ?? () from /usr/lib/libQtGui.so.4
#105 0xb62a4ec3 in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#106 0xb62a5081 in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#107 0xb62a77f2 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#108 0xb5959e14 in QApplication::exec () from /usr/lib/libQtGui.so.4
#109 0x0827332b in ?? ()
#110 0xb547b5c5 in __libc_start_main () from /lib/i686/libc.so.6
#111 0x08084231 in _start ()
Comment 1 Andrea Diamantini 2008-12-09 00:03:35 UTC
did this happend again? I really cannot reproduce it and looking at your bt seems a kdelibs bug.
Comment 2 Blindauer Emmanuel 2008-12-10 01:51:48 UTC
Yes, I'm still having this problem.
my current versions are (mandriva cooker packages):

kdelibs4-core-4.1.81-1mdv2009.1 (20081128 or later)
libkipiplugins1-0.2.0-1.beta4.2mdv2009.1
libkipi6-4.1.81-1mdv2009.1
libkipiplugins1-0.2.0-1.beta4.2mdv2009.1
digikam-0.10.0-1.beta6

I've tried to remove settings from kipirc, but it keep crasing after settings values for the remote gallery
Comment 3 Gerhard Kulzer 2009-01-15 07:00:21 UTC
Created attachment 30263 [details]
degug trace, gdb output, wireshark tcp protocol
Comment 4 Gerhard Kulzer 2009-01-15 07:02:16 UTC
I have the same problem: digikam opens the dialog with gallery (seems to go fine, see wireshark trace in my attachment), then crashes. debug trace is attached.
digiKam version 0.10.0-rc1 (rev.: 910756)
Exiv2 can write to Jp2: Yes
Exiv2 can write to Jpeg: Yes
Exiv2 can write to Png: Yes
Exiv2 can write to Tiff: Yes
Exiv2 support XMP metadata: Yes
LibCImg: 129
LibExiv2: 0.18
LibJPEG: 62
LibJasper: 1.900.1
LibKDE: 4.1.96 (KDE 4.1.96 (KDE 4.2 RC1))
LibKExiv2: 0.6.0
LibKdcraw: 0.5.0
LibLCMS: 116
LibPNG: 1.2.27
LibQt: 4.4.3
LibRaw: 0.7.0-Alpha1
LibTIFF: LIBTIFF, Version 3.8.2 Copyright (c) 1988-1996 Sam Leffler Copyright (c) 1991-1996 Silicon Graphics, Inc.
Marble widget: pre 0.7 SVN
LibGphoto2: 2.4.2
LibKipi: 0.4.0
Comment 5 Andrea Diamantini 2009-01-15 10:07:22 UTC
SVN commit 911296 by adjam:

CCBUG:175928

I really cannot reproduce this bug in my system.
Anyway, I hope this little change could fix it..
Please, let me know if it's so.




 M  +11 -5     gallerywindow.cpp  
 M  +18 -18    plugin_galleryexport.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=911296
Comment 6 Blindauer Emmanuel 2009-01-24 08:04:46 UTC
With the currrent version of kipi-plugins (rc1), the bug is fixed. I thing this bug is a dupe of 172910
Comment 7 Andrea Diamantini 2009-02-05 10:04:25 UTC
Reopening bug.
Sorry about that, but I cannot reproduce it at all. With comment #6 I argued that it was fixed..
Comment 8 Andrea Diamantini 2009-02-05 10:06:09 UTC
*** Bug 182954 has been marked as a duplicate of this bug. ***
Comment 9 Andrea Diamantini 2009-02-05 10:25:04 UTC
SVN commit 921581 by adjam:

CCBUG: 175928

As said I cannot reproduce this bug at all.
Looking at knowit backtrace, I tried fixing..
Please, let me know if it is so.



 M  +4 -2      galleryitem.h  
 M  +30 -11    gallerywindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=921581
Comment 10 Blindauer Emmanuel 2009-02-05 11:26:59 UTC
Something perhaps related: with the fix from #5, I can use the plugin, create directories on the gallery, but I'm unable to see them, even after reconnecting.
the directory is correctly created as I see them on the web interface. upload works.
Comment 11 k n o x i t 2009-02-06 20:48:28 UTC
ok, we might be getting closer i guess. NO MORE CRASHES or error message, but the directory structure is not displayed correctly.

I can see the root directory and all of its first level sub-directories, but nothing from then on.

@Andrea - I will give you temporary acces to my gallery and send you a private message now with the access info. maybe then you can reproduce what is happening here.

pls let me know if there is anything else i can do.
Comment 12 k n o x i t 2009-02-06 21:42:16 UTC
another thing i just noticed. If you click on the + icon next to the root album, it pops up the first level sub-directories, but if you double click on it, and thus force a refresh of the directory content I suppose, it lists no subdirectories and the + icon disappears.
Comment 13 k n o x i t 2009-02-07 00:18:30 UTC
ok, did another test. double clicking on any folder/album does not cause function GalleryWindow::slotAlbums to be executed. I would think that it should be, no?
Comment 14 k n o x i t 2009-02-10 07:36:12 UTC
hi andrea. i had a nother look.

I THINK (pls correct me if I'm wrong) the problem is at this line in function GalleryWindow::slotAlbums

QList<QTreeWidgetItem*> parentItemList = d->albumView->findItems(parentTitle, Qt::MatchExactly);

My theory is that you assume that the list of albums and their parents are hierarchical, however, they are not! IDs of the albums increase as new albums are created, but you can have a newer album with a higher ID as a parent of an old album with a lower ID. so if you try to find the parent, which is only going to be scanned later on, there is no match, it can not add the children and the problem propagates.

I didn't try to solve the algorithm outright, since i didn't want to duplicate efforts.

Nima
Comment 15 Andrea Diamantini 2009-02-11 11:59:40 UTC
SVN commit 924664 by adjam:

Fixing bug #175928. Try 1.

CCBUG: 175928



 M  +38 -50    gallerywindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=924664
Comment 16 k n o x i t 2009-02-11 17:48:40 UTC
andrea,

thanks for the fix. The directory structure now displays correctly and one can navigate through it using the plus expander signs next to the folder.

HOWEVER, when one clicks on an album name, which you have to do in order to add photos or create albums, it tries to refresh the contents including the subalbums. At this point, the plus sign disappears and the subalbums are no longer displayed.

I'm guessing it has something to do with "void GalleryWindow::connectSignals()"??

new albums are created correctly, BUT the entire tree is reloaded and one has to expand again to reach the point where the album was created.

let me know if i can help.
Comment 17 Andrea Diamantini 2009-02-12 10:37:27 UTC
SVN commit 925060 by adjam:

BUG: 175928

Bug Fixed! Now GalleryExport shows deep dirs & let user
browsing them. Yeah! 



 M  +10 -9     gallerywindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=925060