BUG: 175928

Bug Fixed! Now GalleryExport shows deep dirs & let user
browsing them. Yeah! 


svn path=/trunk/extragear/graphics/kipi-plugins/; revision=925060